--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
       font-family: monospace;
       background: linear-gradient(to right, hsla(0, 0%, 0%, 0), hsl(120, 96%, 29%) );
     }
-    h1
+    h1 aa
     {
       font-family: serif;
     }
